; ModuleID = '/home/carl/AnghaBench/darwin-xnu/pexpert/arm/extr_pe_identify_machine.c_pe_arm_init_timer.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/pexpert/arm/extr_pe_identify_machine.c_pe_arm_init_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tbd_ops = type { i32*, i32*, i32* }
%struct.TYPE_2__ = type { i64* }

@fleh_fiq_generic = common dso_local global i32 0, align 4
@__const.pe_arm_init_timer.generic_funcs = private unnamed_addr constant %struct.tbd_ops { i32* @fleh_fiq_generic, i32* null, i32* null }, align 8
@gPicBase = common dso_local global i32 0, align 4
@gTimerBase = common dso_local global i32 0, align 4
@gSocPhys = common dso_local global i32 0, align 4
@NSEC_PER_SEC = common dso_local global i32 0, align 4
@PMGR_EVENT_TMR_CTL_EN = common dso_local global i32 0, align 4
@PMGR_INTERVAL_TMR_CTL_CLR_INT = common dso_local global i32 0, align 4
@PMGR_INTERVAL_TMR_CTL_EN = common dso_local global i32 0, align 4
@bcm2837_funcs = common dso_local global %struct.tbd_ops zeroinitializer, align 8
@gPEClockFrequencyInfo = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@gPESoCDeviceType = common dso_local global i32 0, align 4
@kAICTmrCfg = common dso_local global i32 0, align 4
@kAICTmrCfgEn = common dso_local global i32 0, align 4
@kAICTmrCnt = common dso_local global i32 0, align 4
@kAICTmrIntStat = common dso_local global i32 0, align 4
@kAICTmrIntStatPct = common dso_local global i32 0, align 4
@rPMGR_EVENT_TMR = common dso_local global i32 0, align 4
@rPMGR_EVENT_TMR_CTL = common dso_local global i32 0, align 4
@rPMGR_EVENT_TMR_PERIOD = common dso_local global i32 0, align 4
@rPMGR_INTERVAL_TMR = common dso_local global i32 0, align 4
@rPMGR_INTERVAL_TMR_CTL = common dso_local global i32 0, align 4
@s5l8960x_funcs = common dso_local global %struct.tbd_ops zeroinitializer, align 8
@s7002_funcs = common dso_local global %struct.tbd_ops zeroinitializer, align 8
@s8000_funcs = common dso_local global %struct.tbd_ops zeroinitializer, align 8
@t7000_funcs = common dso_local global %struct.tbd_ops zeroinitializer, align 8
@t8002_funcs = common dso_local global %struct.tbd_ops zeroinitializer, align 8
@t8010_funcs = common dso_local global %struct.tbd_ops zeroinitializer, align 8
@t8011_funcs = common dso_local global %struct.tbd_ops zeroinitializer, align 8
@t8015_funcs = common dso_local global %struct.tbd_ops zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @pe_arm_init_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pe_arm_init_timer(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.tbd_ops, align 8
  %9 = alloca %struct.tbd_ops*, align 8
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %10 = bitcast %struct.tbd_ops* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %10, i8* align 8 bitcast (%struct.tbd_ops* @__const.pe_arm_init_timer.generic_funcs to i8*), i64 24, i1 false)
  store %struct.tbd_ops* %8, %struct.tbd_ops** %9, align 8
  %11 = load i32, i32* @gPicBase, align 4
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* @gTimerBase, align 4
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* @gSocPhys, align 4
  store i32 %13, i32* %5, align 4
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
